# energy-traffic-light

./: .gitignore  index.html
assets/: index-ygT95HaH.js
data/: 216_MFH_1_Wärmepumpe_2023-01-01_2024-01-01.csv  216_MFH_1_Wärmepumpe_2024-01-01_2024-09-11.csv  217_MFH_1_Wohnung_4_5_2023-01-01_2024-01-01.csv  217_MFH_1_Wohnung_4_5_2024-01-01_2024-09-11.csv  218_MFH_1_Wohnung_3_5_2023-01-01_2024-01-01.csv  218_MFH_1_Wohnung_3_5_2024-01-01_2024-09-11.csv  219_MFH_1_Wohnung_4_5_2023-01-01_2024-01-01.csv  219_MFH_1_Wohnung_4_5_2024-01-01_2024-09-11.csv  220_MFH_1_Wohnung_3_5_2023-01-01_2024-01-01.csv  220_MFH_1_Wohnung_3_5_2024-01-01_2024-09-11.csv  221_MFH_1_Wohnung_4_5_2023-01-01_2024-01-01.csv  221_MFH_1_Wohnung_4_5_2024-01-01_2024-09-11.csv  3390_Trafostation_2024-01-01_2024-09-11.csv  552_MFH_1_Netzanschluss_2024-01-01_2024-09-11.csv  553_MFH_1_PVA_2023-01-01_2024-01-01.csv  553_MFH_1_PVA_2024-01-01_2024-09-11.csv  64_MFH_1_Wohnung_3_5_2023-01-01_2024-01-01.csv  64_MFH_1_Wohnung_3_5_2024-01-01_2024-09-11.csv  grid_power_load.json  new_data.json
energy-traffic-light-web/: package.json  pnpm-lock.yaml  vite.config.ts
energy-traffic-light-web/scripts/: deploy.js
energy-traffic-light-web/src/: CarbonFootprintCalculator.tsx
grid-load/: README.md  init_db.py  main.py  pyproject.toml  streamlit.py  viz.ipynb
grid-load/export/: 216_MFH_1_Wärmepumpe_2023-01-01_2024-01-01.json  216_MFH_1_Wärmepumpe_2024-01-01_2024-09-11.json  217_MFH_1_Wohnung_4_5_2023-01-01_2024-01-01.json  217_MFH_1_Wohnung_4_5_2024-01-01_2024-09-11.json  218_MFH_1_Wohnung_3_5_2023-01-01_2024-01-01.json  218_MFH_1_Wohnung_3_5_2024-01-01_2024-09-11.json  219_MFH_1_Wohnung_4_5_2023-01-01_2024-01-01.json  219_MFH_1_Wohnung_4_5_2024-01-01_2024-09-11.json  220_MFH_1_Wohnung_3_5_2023-01-01_2024-01-01.json  220_MFH_1_Wohnung_3_5_2024-01-01_2024-09-11.json  221_MFH_1_Wohnung_4_5_2023-01-01_2024-01-01.json  221_MFH_1_Wohnung_4_5_2024-01-01_2024-09-11.json  3390_Trafostation_2023-01-01_2024-01-01.json  3390_Trafostation_2024-01-01_2024-09-11.json  552_MFH_1_Netzanschluss_2023-01-01_2024-01-01.json  552_MFH_1_Netzanschluss_2024-01-01_2024-09-11.json  64_MFH_1_Wohnung_3_5_2023-01-01_2024-01-01.json  64_MFH_1_Wohnung_3_5_2024-01-01_2024-09-11.json  sample_grid.json
grid-load/grid_load/: processing.py  setup.py
